2002-11-04  Christopher Faylor  <cgf@redhat.com>

	* sigproc.cc (WAIT_SIG_PRIORITY): Bump to THREAD_PRIORITY_TIME_CRITICAL.

2002-11-04  Christopher Faylor  <cgf@redhat.com>

	* pinfo.cc (_pinfo::commune_send): Initialize buffer or suffer random
	crashes.

2002-11-04  Christopher Faylor  <cgf@redhat.com>

	* fhandler_process.cc (fhandler_process::fill_filebuf): Deal with error
	condition from cmdline retrieval.

2002-11-04  Christopher Faylor  <cgf@redhat.com>

	* sigproc.cc (WAIT_SIG_PRIORITY): Bump to highest priority.

2002-11-04  Christopher Faylor  <cgf@redhat.com>

	* include/cygwin/version.h: Bump DLL minor number.

2002-11-03  Christopher Faylor  <cgf@redhat.com>

	* fhandler_serial.cc (fhandler_serial::ioctl): Reformat.  Set errno
	appropriately.  Exit from the bottom.  Correctly deal with third
	argument for TCFLSH.  (Suggested by Sergey Okhapkin)

2003-11-03  Sergey Okhapkin  <sos@prospect.com.ru>

	* fhandler_tty.cc (fhandler_tty_slave::ioctl): Do nothing if the new
	window size is equal to the old one.  Send SIGWINCH if slave connected
	to a pseudo tty.
	(fhandler_pty_master::ioctl): Do nothing if the new window size is
	equal to the old one.

2002-10-31  Pierre Humblet <pierre.humblet@ieee.org>

	* fhandler.cc (fhandler_base::open): Verify pc isn't NULL.

2002-10-30  Christopher Faylor  <cgf@redhat.com>

	* include/cygwin/version.h: Bump DLL minor number.

2002-10-30  Christopher Faylor  <cgf@redhat.com>

	* external.cc (cygwin_internal): Implement CW_CMDLINE.
	* pinfo.h (SIGCOMMUNE): New signal type.
	(commune_result): New structure for commune functions.
	(picom): New enum for commune functions.
	(_pinfo::hello_pid): New.  Pid who's communicating with me.
	(_pinfo::tothem): New.  Handle of communicating pipe.
	(_pinfo::fromthem): Ditto.
	(_pinfo::commune_recv): Declare.
	(_pinfo::commune_send): Declare.
	(_pinfo::alive): Declare.
	(_pinfo::cmdline): Declare.
	(_pinfo::lock): Declare.
	* pinfo.cc (set_myself): Initialize new _pinfo lock.