@@ -1,5 +1,11 @@
 2002-11-04  Christopher Faylor  <cgf@redhat.com>
 
+	* pinfo.cc (_pinfo::commune_send): Set priority low when sleeping,
+	waiting for commune completion so that we don't spin waiting for lower
+	priority processes.
+
+2002-11-04  Christopher Faylor  <cgf@redhat.com>
+
 	* sigproc.cc (WAIT_SIG_PRIORITY): Bump to THREAD_PRIORITY_TIME_CRITICAL.
 
 2002-11-04  Christopher Faylor  <cgf@redhat.com>
